--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,12 @@
 body{
-    background-color: #EAE5C7;
-    font-size: 18px;
+	font-size: 18px;
 	font-family: "Roboto";
+	background-color: #EEEEEE;
 }
 
-.manuntecao{
-	border-radius: 15px;
-	background-color: #424242;
-	width: 400px;
-	margin: 20px;
-	padding: 10px 0px;
-	float: right;
-	font-size: 16px;
-}
-
-p{
-	color: #757575;
-	text-align: center;
-	padding-bottom: 10px;
+nav{
+	background-color: #FAFAFA;
+	color: white;
 }
 
 section{
@@ -25,6 +14,10 @@ section{
 	text-align: center;
 }
 
+p{
+	color: #757575;
+	padding-bottom: 10px;
+}
 
 a{
 	color: #6aaf4e;
@@ -35,10 +28,57 @@ a:hover{
 	text-decoration: underline;
 }
 
+nav{
+	padding: 30px 0;
+	text-transform: uppercase;
+	box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
+
+}
+
+nav #logo{
+	display: inline-block;
+	padding: 3px 6px;
+	margin: 10px 0;
+	font-weight: bold;
+	font-size: 23px;
+	
+}
+
+
+
+nav #logo:hover{
+	text-decoration: none;
+}
+
+nav #menu{
+	float: right;
+	margin-top: 15px;
+}
+
+nav #menu li{
+	display: inline-block;
+	margin-left: 15px;
+}
+
+nav #menu li a{
+	color: #757575;
+	text-decoration: none;
+	opacity: 0.8;
+}
+
+nav #menu li a:hover{
+	opacity: 1;
+	color: #6aaf4e;
+}
 
 .container{
 	max-width: 80%;
-	margin: 50px auto;
+	margin: 0 auto;
+}
+
+.conteudo{
+	max-width: 80%;
+	margin: -150px auto;
 }
 
 #me{
@@ -53,17 +93,15 @@ a:hover{
 
 .about-me{
 	margin: 0 auto;
-	width: 85%;
+	width: 60%;
 }
 
-footer{
-	font-size: 13px;
+.manuntecao{
+	border-radius: 15px;
+	background-color: #424242;
+	width: 400px;
+	margin: -59px 3px ;
+	padding: 10px 0px 10px 0px;
+	float: bottom;
+	font-size: 16px;
 }
-
-.made p:after{
-	  content: '\2764';
-	  color: #E57373
-}
-
-
-    
