--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,14 @@
-body{
-	font-size: 18px;
-	font-family: "Roboto";
-	background-color: #EEEEEE;
+/* Custom Stylesheet */
+/**
+ * Use this file to override Materialize files so you can update
+ * the core Materialize files in the future
+ *
+ * Made By MaterializeCSS.com
+ */
+
+.icon-block {
+  padding: 0 15px;
 }
-
-nav{
-	background-color: #FAFAFA;
-	color: white;
+.icon-block .material-icons {
+	font-size: inherit;
 }
-
-section{
-	padding: 60px 0 200px;
-	text-align: center;
-}
-
-p{
-	color: #757575;
-	padding-bottom: 10px;
-}
-
-a{
-	color: #6aaf4e;
-	text-decoration: none;
-}
-
-a:hover{
-	text-decoration: underline;
-}
-
-nav{
-	padding: 30px 0;
-	text-transform: uppercase;
-	box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
-
-}
-
-nav #logo{
-	display: inline-block;
-	padding: 3px 6px;
-	margin: 10px 0;
-	font-weight: bold;
-	font-size: 23px;
-	
-}
-
-nav #logo:hover{
-	text-decoration: none;
-}
-
-nav #menu{
-	float: right;
-	margin-top: 15px;
-}
-
-nav #menu li{
-	display: inline-block;
-	margin-left: 15px;
-}
-
-nav #menu li a{
-	color: #757575;
-	text-decoration: none;
-	opacity: 0.8;
-}
-
-nav #menu li a:hover{
-	opacity: 1;
-	color: #6aaf4e;
-}
-
-.container{
-	max-width: 80%;
-	margin: 0 auto;
-}
-
-.conteudo{
-	max-width: 80%;
-	margin: -0px auto;
-}
-
-#me{
-	width: 220px;
-    height: 200px;
-    display: block;
-	margin: 0 auto;
-	margin-bottom: 30px;
-	border-radius: 50%;
-	box-shadow: 0px 1px 100px 0px rgba(0, 0, 0, 0.5);
-}
-
-.about-me{
-	margin: 0 auto;
-	width: 60%;
-}
-
